apps/services/stremio/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stremio-service
  namespace: default
spec:
  selector:
    app: stremio
  ports:
    - name: http
      port: 11470
    - name: https
      port: 12470
  type: ClusterIP
