apps/services/stremio/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stremio
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Streaming Aggregator
    gethomepage.dev/group: Media
    gethomepage.dev/icon: stremio.png
    gethomepage.dev/name: Stremio
    cert-manager.io/cluster-issuer: homelab-issuer
spec:
  rules:
    - host: stremio.internal
      http:
        paths:
          - backend:
              service:
                name: stremio-service
                port:
                  number: 11470
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - stremio.internal
      secretName: homelab-tls
